# pygltf

./: .gitignore  README.md  pyproject.toml
examples/: merge_two_files.py  scene-1-1.glb  scene-1-2.glb
gltf/: __init__.py  components.py  definitions.py  geometry.py  loader.py  unpack.py  writer.py
pygltf/: __init__.py
